# CrossplatformMocks

./: CMakeLists.txt  vcpkg.json
include/: ATL.h  Codec.h  File.h  Graphic.h  Keyboard.h  Macro.h  Module.h  Shell.h  String.h  Time.h  Typedef.h  intsafe.h
